# rtsp

./: .gitignore  CMakeLists.txt  README.md
build-vcpkg/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RtspPlayer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rtsp_player.vcxproj  rtsp_player.vcxproj.filters
build-vcpkg/rtsp_player.dir/Release/: rtsp_player.exe.recipe
build-vcpkg/rtsp_player.dir/Release/rtsp_player.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vcpkg/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-vcpkg/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
build-vcpkg/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-vcpkg/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
config/: config.yaml
include/: audio_player.hpp  decoder.hpp  frame_capture.hpp  h264_depacketizer.hpp  jitter_buffer.hpp  rtp_parser.hpp  rtsp_client.hpp  video_renderer.hpp
scripts/: build.ps1  start_webcam_rtsp.ps1  stop_webcam_rtsp.ps1
shaders/vulkan/: nv12.frag  overlay.frag  overlay.vert  video.vert
src/: audio_player.cpp  decoder.cpp  frame_capture.cpp  h264_depacketizer.cpp  jitter_buffer.cpp  main.cpp  opengl_video_renderer.cpp  rtp_parser.cpp  rtsp_client.cpp  video_renderer.cpp  vulkan_video_renderer.cpp
